[project]
requires-python = ">= 3.13"

[tool.pytest.ini_options]
pythonpath = ["src", "testing"]
testpaths = ["tests"]

[tool.pyright]
include = ["**/*.py"]
extraPaths = ["src", "testing"]
typeCheckingMode = "strict"

[tool.pyink]
line-length = 100
pyink-indentation = 2

[tool.flake8]
indent-size = 2
max-line-length = 100
exclude = ["__pycache__"]
